deployment/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    io.kompose.service: redis
  clusterIP: None
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
