deployment/vue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue
spec:
  selector:
    io.kompose.service: vue
  clusterIP: None
  ports:
    - name: vue # Actually, no port is needed.
      port: 80
      targetPort: 80
